Crear/Actualizar Categorias/drama/index.html

--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Invasion -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Morning Show -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie107.html">
+    <img src="https://image.tmdb.org/t/p/original/y9x2R87yt2U616736NJrP0d56dt.jpg" alt="The Morning Show" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">The Morning Show</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Invasion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie106.html">
     <img src="https://image.tmdb.org/t/p/original/we6trvt9PfESlC4Td3SWQvmrmb3.jpg" alt="Invasión" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
