--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Invasion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Morning Show -->
+<li>
+  <a href="../Series/serie107.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/y9x2R87yt2U616736NJrP0d56dt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">The Morning Show 2019</span>
+    <span class="hidden">¿Qué sucede cuando las personas en las que confías demuestran ser deshonestas? The Morning Show narra la caída libre de un noticiero matutino a raíz de un escándalo, y su lucha por sobrevivir en una era en la que las noticias llegan en la palma de tu mano.</span>
+  </a>
+</li>
+<!--FIN--><!-- Invasion -->
 <li>
   <a href="../Series/serie106.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
