Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Morning Show -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Canibal -->
+<li>
+  <a href="../Series/serie108.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4vs4YqFdiB9gzkeqwpz8u25aG1L.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Caníbal 2022</span>
+    <span class="hidden">Tras causar un grave incidente, el oficial de policía Daigo Agawa se lleva a su esposa y a su hija a vivir en la aldea remota de Kuge. Parece el lugar perfecto para recuperarse de la pesadilla, a pesar de la desaparición misteriosa del anterior oficial que trabajaba ahí. Un día, encuentran el cuerpo de una anciana en las montañas. La familia Goto dice que la atacó un oso, pero Daigo nota una mordedura humana. Pronto queda claro que no todo es lo que parece en la aldea.</span>
+  </a>
+</li>
+<!--FIN--><!-- The Morning Show -->
 <li>
   <a href="../Series/serie107.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
