--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Canibal -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un chico malo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie109.html">
+    <img src="https://image.tmdb.org/t/p/original/2B0mE07ueFturAmOElZIkkzrxBp.jpg" alt="Un chico malo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un chico malo</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Canibal -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie108.html">
     <img src="https://image.tmdb.org/t/p/original/4vs4YqFdiB9gzkeqwpz8u25aG1L.jpg" alt="Caníbal" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
