Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Canibal -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un chico malo -->
+<li>
+  <a href="../Series/serie109.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2B0mE07ueFturAmOElZIkkzrxBp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un chico malo 2024</span>
+    <span class="hidden">Un cómico relata cómo, gracias a su humor, consiguió sobrevivir en un durísimo reformatorio en este crudo drama sobre convertirse en adulto inspirado en hechos reales.</span>
+  </a>
+</li>
+<!--FIN--><!-- Canibal -->
 <li>
   <a href="../Series/serie108.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
