Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Putin -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Baskın: Karabasan -->
+<li>
+  <a href="../Peliculas/pelicula934.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qAbfXi0IYc7Aqaul0C6sbrVXrwa.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Baskın: Karabasan 2015</span>
+    <span class="hidden">Una patrulla compuesta por cinco policías investiga una llamada de socorro procedente de un edificio abandonado en medio de la nada. Se encuentran con una misa negra practicada por un oscuro culto de tintes “lovecraftianos”. A plena noche y atrapados en un laberinto de horror puro, los policias tratarán de sobrevivir a los ataques de esta misteriosa secta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Putin -->
 <li>
   <a href="../Peliculas/pelicula933.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
