--- a/Plataforma/warnerbros/index.html
+++ b/Plataforma/warnerbros/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Alto Knights: Mafia y poder -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Loca Academia De Policia 2: Su Primera Mision -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula936.html">
+    <img src="https://image.tmdb.org/t/p/original/8oddoFLwlVk96dpMSSWU2rrGhIS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Loca Academia De Policía 2: Su Primera Misión</div>
+  <div class="text-xs text-white/70">1985</div>
+</article><!-- The Alto Knights: Mafia y poder -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula903.html">
     <img src="https://image.tmdb.org/t/p/original/fZrMqok5ZQH82R1YqBu3LcG26ON.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
