Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca academia de policia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia De Policia 2: Su Primera Mision -->
+<li>
+  <a href="../Peliculas/pelicula936.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8oddoFLwlVk96dpMSSWU2rrGhIS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca Academia De Policía 2: Su Primera Misión 1985</span>
+    <span class="hidden">El oficial Carey Mahoney y sus secuaces finalmente se han graduado de la Academia de Policía y están a punto de salir a la calle en su primera misión. La pregunta es, ¿están listos para luchar contra una banda de terroristas que graban el graffiti?</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca academia de policia -->
 <li>
   <a href="../Peliculas/pelicula935.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
