Crear/Actualizar Categorias/comedia/index.html

--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Loca Academia De Policia 2: Su Primera Mision -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Loca Academia De Policia 3: De Vuelta A La Escuela -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula937.html">
+    <img src="https://image.tmdb.org/t/p/original/6D3CuPOQH4WDMRjvjrlY2mQeE1t.jpg" alt="Loca Academia De Policía 3: De Vuelta A La Escuela" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Loca Academia De Policía 3: De Vuelta A La Escuela</div>
+  <div class="text-xs text-white/70">1986</div>
+</article><!-- Loca Academia De Policia 2: Su Primera Mision -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula936.html">
     <img src="https://image.tmdb.org/t/p/original/8oddoFLwlVk96dpMSSWU2rrGhIS.jpg" alt="Loca Academia De Policía 2: Su Primera Misión" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
