Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia De Policia 2: Su Primera Mision -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia De Policia 3: De Vuelta A La Escuela -->
+<li>
+  <a href="../Peliculas/pelicula937.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6D3CuPOQH4WDMRjvjrlY2mQeE1t.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca Academia De Policía 3: De Vuelta A La Escuela 1986</span>
+    <span class="hidden">Cuando se cortan los fondos de la policía, el Gobernador anuncia que debe cerrar una de las academias. Para que sea justo, las dos academias de policía deben competir entre sí para mantenerse en funcionamiento. Mauser persuade a dos oficiales en la academia de Lassard para mejorar sus probabilidades, pero las cosas no salen como se esperaba ...</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca Academia De Policia 2: Su Primera Mision -->
 <li>
   <a href="../Peliculas/pelicula936.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
