--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia De Policia 3: De Vuelta A La Escuela -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca academia de policia 4: Los ciudadanos se defienden -->
+<li>
+  <a href="../Peliculas/pelicula938.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1zOZuFnzn6x7MR10i9DFCgrR4uD.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca academia de policía 4: Los ciudadanos se defienden 1987</span>
+    <span class="hidden">Un nuevo grupo de reclutas llega a la Academia de Policía, esta vez un grupo de voluntarios civiles que se han unido al nuevo programa Ciudadanos en Patrulla del Comandante Lassard. Aunque el proyecto de relaciones con la comunidad cuenta con un fuerte respaldo gubernamental, el indignado capitán Harris está decidido a verlo fracasar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca Academia De Policia 3: De Vuelta A La Escuela -->
 <li>
   <a href="../Peliculas/pelicula937.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
