--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca academia de policia 4: Los ciudadanos se defienden -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 5: Operacion Miami Beach -->
+<li>
+  <a href="../Peliculas/pelicula939.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9S73LkNaNdku4lJ7aPTqeA8W96B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca Academia de Policía 5: Operación Miami Beach 1988</span>
+    <span class="hidden">Los inadaptados de la Academia de Policía viajan a Miami, Florida para que el comandante de su academia, Lassard, reciba un prestigioso premio vitalicio pendiente de su retiro, que involucra a un grupo de ladrones de joyas tras el botín robado que Lassard sin saberlo tiene en su poder.</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca academia de policia 4: Los ciudadanos se defienden -->
 <li>
   <a href="../Peliculas/pelicula938.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
