--- a/Plataforma/warnerbros/index.html
+++ b/Plataforma/warnerbros/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Loca Academia de Policia 5: Operacion Miami Beach -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Loca Academia de Policia 6: Ciudad Sitiada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula940.html">
+    <img src="https://image.tmdb.org/t/p/original/hB4qarPxjdfpqKoiTv1eRnQN2BS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Loca Academia de Policía 6: Ciudad Sitiada</div>
+  <div class="text-xs text-white/70">1989</div>
+</article><!-- Loca Academia de Policia 5: Operacion Miami Beach -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula939.html">
     <img src="https://image.tmdb.org/t/p/original/9S73LkNaNdku4lJ7aPTqeA8W96B.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
