--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 5: Operacion Miami Beach -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 6: Ciudad Sitiada -->
+<li>
+  <a href="../Peliculas/pelicula940.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hB4qarPxjdfpqKoiTv1eRnQN2BS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca Academia de Policía 6: Ciudad Sitiada 1989</span>
+    <span class="hidden">Nuestros policías favoritos son convocados para tratar con una pandilla que roba bancos y joyeros. Usando sus diversos talentos y su extraordinaria suerte, los ladrones no tienen ninguna posibilidad contra nuestros hombres y mujeres vestidos de azul.</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca Academia de Policia 5: Operacion Miami Beach -->
 <li>
   <a href="../Peliculas/pelicula939.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
