Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 6: Ciudad Sitiada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 7: Mision en Moscu -->
+<li>
+  <a href="../Peliculas/pelicula941.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iZMEM9FHmfpgelWS3IvjSbDWZ9q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Loca Academia de Policía 7: Misión en Moscú 1994</span>
+    <span class="hidden">Ahora, los agentes más famosos y peculiares de Florida viajan hasta Rusia para colaborar con la policía soviética. El objetivo es atrapar a un criminal llamado Konali, que se ha hecho con un programa informático capaz de controlar sofisticados sistemas de seguridad de todo el mundo, cometiendo robos en todo el planeta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca Academia de Policia 6: Ciudad Sitiada -->
 <li>
   <a href="../Peliculas/pelicula940.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
