Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Loca Academia de Policia 7: Mision en Moscu -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hazme el favor -->
+<li>
+  <a href="../Peliculas/pelicula942.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/aUtjDS46VWJm6Tc3Bsk7BAJBwFN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hazme el favor 2023</span>
+    <span class="hidden">A punto de perder la casa en la que creció, Maddie descubre un intrigante anuncio clasificado de un trabajo: padres helicóptero millonarios buscan a alguien para poder “salir” con su hijo introvertido de 19 años, Percy, antes de que se vaya a la universidad. Para su sorpresa, Maddie, pronto descubre que el extraño Percy no es una cosa segura.</span>
+  </a>
+</li>
+<!--FIN--><!-- Loca Academia de Policia 7: Mision en Moscu -->
 <li>
   <a href="../Peliculas/pelicula941.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
