--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -77,7 +77,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Baskın: Karabasan -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ouija -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula943.html">
+    <img src="https://image.tmdb.org/t/p/original/gwjHlGjK2xXKpjd65BWyAMwzTWC.jpg" alt="Ouija" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ouija</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Baskın: Karabasan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula934.html">
     <img src="https://image.tmdb.org/t/p/original/qAbfXi0IYc7Aqaul0C6sbrVXrwa.jpg" alt="Baskın: Karabasan" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
