--- a/Plataforma/universal/index.html
+++ b/Plataforma/universal/index.html
@@ -218,7 +218,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una Pareja de Idiotas 2 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ouija -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula943.html">
+    <img src="https://image.tmdb.org/t/p/original/gwjHlGjK2xXKpjd65BWyAMwzTWC.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ouija</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Una Pareja de Idiotas 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula890.html">
     <img src="https://image.tmdb.org/t/p/original/zsm4tAiPire8ZlmosySZqywxCvY.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
