--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ouija -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Proyecto Adam -->
+<li>
+  <a href="../Peliculas/pelicula944.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/k5waciRFMN5bwudDrgFLffoAorm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Proyecto Adam 2022</span>
+    <span class="hidden">Adam Reed (Interpretado por Ryan Reynolds) es un viajero del tiempo del año 2050 que se ha aventurado en una misión de rescate para buscar a Laura (Interpretada por Zoe Saldana), la mujer que ama, que se perdió en el continuo espacio-tiempo en circunstancias misteriosas. Cuando la nave de Adam se estropea, es enviado en espiral al año 2022, y al único lugar que conoce de esta época de su vida: su casa, donde vive su yo cuando tenía 13 años.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ouija -->
 <li>
   <a href="../Peliculas/pelicula943.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
