Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Proyecto Adam -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Corazones malheridos -->
+<li>
+  <a href="../Peliculas/pelicula945.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ndp4yIfg04i3raprDJ0UKWD8IK9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Corazones malheridos 2022</span>
+    <span class="hidden">Una aspirante a música y un marine a punto de irse a Irak deciden casarse por conveniencia. Pero una tragedia pronto convierte su relación falsa en algo muy real.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Proyecto Adam -->
 <li>
   <a href="../Peliculas/pelicula944.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
