Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Corazones malheridos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El salario del miedo -->
+<li>
+  <a href="../Peliculas/pelicula946.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6cKzsWfDtGj5BMHi1dN9EkGz4lJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El salario del miedo 2024</span>
+    <span class="hidden">Cuando la explosión de un pozo petrolero amenaza cientos de vidas, un equipo de expertos debe transportar nitroglicerina en una travesía mortal por el desierto.</span>
+  </a>
+</li>
+<!--FIN--><!-- Corazones malheridos -->
 <li>
   <a href="../Peliculas/pelicula945.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
