Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El salario del miedo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Era de Hielo: Las aventuras de Buck -->
+<li>
+  <a href="../Peliculas/pelicula947.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iDah4ZcDX3F316LcLlmNNAzsRqF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Era de Hielo: Las aventuras de Buck 2022</span>
+    <span class="hidden">Continúa contando las hilarantes aventuras de uno de los mamíferos favoritos de la prehistoria. Tras un distanciamiento con su hermana mayor, Ellie, los hermanos Crash y Eddie parten a la búsqueda de un lugar propio, pero rápidamente acaban atrapados en una caverna subterránea. El aventurero Buck Wild acudirá a su rescate y juntos, tendrán que enfrentarse a los dinosaurios del Mundo Perdido.</span>
+  </a>
+</li>
+<!--FIN--><!-- El salario del miedo -->
 <li>
   <a href="../Peliculas/pelicula946.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
