--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Era de Hielo: Las aventuras de Buck -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Primera cita de Riley -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula948.html">
+    <img src="https://image.tmdb.org/t/p/original/wD4ccmFDoREmqAHmzwOjNuYsylv.jpg" alt="Primera cita de Riley" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Primera cita de Riley</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- La Era de Hielo: Las aventuras de Buck -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula947.html">
     <img src="https://image.tmdb.org/t/p/original/iDah4ZcDX3F316LcLlmNNAzsRqF.jpg" alt="La Era de Hielo: Las aventuras de Buck" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
