Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Era de Hielo: Las aventuras de Buck -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Primera cita de Riley -->
+<li>
+  <a href="../Peliculas/pelicula948.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wD4ccmFDoREmqAHmzwOjNuYsylv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Primera cita de Riley 2015</span>
+    <span class="hidden">Riley, ahora de 12 años, está colgando en casa con sus padres en San Francisco cuando el problema potencial viene golpeando: un muchacho aparece en la puerta.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Era de Hielo: Las aventuras de Buck -->
 <li>
   <a href="../Peliculas/pelicula947.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
