--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tierras Perdidas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Encanto -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula949.html">
+    <img src="https://image.tmdb.org/t/p/original/d0ezQ1Jz0lpNsX1skEmIvqRL7mN.jpg" alt="Encanto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Encanto</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Tierras Perdidas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula923.html">
     <img src="https://image.tmdb.org/t/p/original/sLDxndoqFWwJEq7iEdYQBzPjUDQ.jpg" alt="Tierras Perdidas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
