--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Encanto -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tarzan -->
+<li>
+  <a href="../Peliculas/pelicula950.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1Gk8iihu4Q4BGh2n1IwNLB3zM8E.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tarzán 1999</span>
+    <span class="hidden">Un hombre criado por gorilas debe decidir a dónde pertenece realmente cuando descubre que es un humano.</span>
+  </a>
+</li>
+<!--FIN--><!-- Encanto -->
 <li>
   <a href="../Peliculas/pelicula949.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
