--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tarzan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sobreviviendo Guazapa -->
+<li>
+  <a href="../Peliculas/pelicula951.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/originalnull" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sobreviviendo Guazapa 2008</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- Tarzan -->
 <li>
   <a href="../Peliculas/pelicula950.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
