--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -98,9 +98,9 @@
 <li>
   <a href="../Peliculas/pelicula951.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
-  src="https://image.tmdb.org/t/p/originalnull" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+  src="https://m.media-amazon.com/images/S/pv-target-images/f4d43a825b34580c5fb65bdf911012fcb4d3ae9208af94a05009f3a724c2b62b.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Sobreviviendo Guazapa 2008</span>
-    <span class="hidden"></span>
+    <span class="hidden">Fuerzas de oposición, un soldado del gobierno y la guerrilla se encuentran atrapados juntos en el área fuertemente bombardeada alrededor del volcán de Guazapa. Después de una reunión hostil, una amistad improbable se desarrolla entre los dos.</span>
   </a>
 </li>
 <!--FIN--><!-- Tarzan -->
