--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -51,7 +51,7 @@
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sobreviviendo Guazapa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula951.html">
-    <img src="https://image.tmdb.org/t/p/originalnull" alt="Sobreviviendo Guazapa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <img src="https://m.media-amazon.com/images/S/pv-target-images/f4d43a825b34580c5fb65bdf911012fcb4d3ae9208af94a05009f3a724c2b62b.jpg" alt="Sobreviviendo Guazapa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
     </div>
