--- a/Peliculas/pelicula951.html
+++ b/Peliculas/pelicula951.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         body {
-            background: url('https://image.tmdb.org/t/p/originalnull') no-repeat center center fixed;
+            background: url('https://images.mubicdn.net/images/film/97258/cache-60239-1745491230/image-w1280.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         .overlay {
@@ -53,7 +53,7 @@
             </div>
             <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
                 <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
-                    <img alt="Sobreviviendo Guazapa" class="rounded-lg w-full h-full object-cover" src="https://image.tmdb.org/t/p/originalnull" />
+                    <img alt="Sobreviviendo Guazapa" class="rounded-lg w-full h-full object-cover" src="https://m.media-amazon.com/images/S/pv-target-images/f4d43a825b34580c5fb65bdf911012fcb4d3ae9208af94a05009f3a724c2b62b.jpg" />
                 </div>
                 <div class="flex-1">
                     <h3 class="text-xl font-semibold">Sobreviviendo Guazapa</h3>
