--- a/Peliculas/pelicula951.html
+++ b/Peliculas/pelicula951.html
@@ -86,7 +86,7 @@
             </div>
             <div id="sinopsis" class="mt-4 bg-[#1a1a1a] p-4 rounded-md">
                 <h4 class="text-white text-lg font-semibold mb-2">Sinopsis</h4>
-                <p class="text-gray-300 text-sm leading-relaxed"></p>
+                <p class="text-gray-300 text-sm leading-relaxed">Fuerzas de oposición, un soldado del gobierno y la guerrilla se encuentran atrapados juntos en el área fuertemente bombardeada alrededor del volcán de Guazapa. Después de una reunión hostil, una amistad improbable se desarrolla entre los dos.</p>
             </div>
         </div>
     </div>
