--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sobreviviendo Guazapa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Voces Inocentes -->
+<li>
+  <a href="../Peliculas/pelicula952.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4n17GclsQnAMr8zGDFc22ZlGocU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Voces Inocentes 2005</span>
+    <span class="hidden">Basada en una historia real. Chava, un niño de 11 años que vive en la periferia de San Salvador, queda como el hombre de la casa una vez que su padre abandona a la familia. Atrapado entre el Ejército y la guerrilla, que empiezan a reclutar a los 12 años, le queda sólo un año antes de ser movilizado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Sobreviviendo Guazapa -->
 <li>
   <a href="../Peliculas/pelicula951.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
