Crear/Actualizar Categorias/aventura/index.html

--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sobreviviendo Guazapa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sobrevivientes despues del terremoto -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula953.html">
+    <img src="https://image.tmdb.org/t/p/original/rmx6bCD4w8Fanqat2kdv7zaHJad.jpg" alt="Sobrevivientes después del terremoto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Sobrevivientes después del terremoto</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Sobreviviendo Guazapa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula951.html">
     <img src="https://m.media-amazon.com/images/S/pv-target-images/f4d43a825b34580c5fb65bdf911012fcb4d3ae9208af94a05009f3a724c2b62b.jpg" alt="Sobreviviendo Guazapa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
