Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Voces Inocentes -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sobrevivientes despues del terremoto -->
+<li>
+  <a href="../Peliculas/pelicula953.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rmx6bCD4w8Fanqat2kdv7zaHJad.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sobrevivientes después del terremoto 2023</span>
+    <span class="hidden">El mundo ha sido reducido a escombros por un terremoto masivo. Si bien nadie sabe con certeza cuánto se extienden las ruinas, o cuál puede ser la causa del terremoto, en el corazón de Seúl solo queda un edificio de apartamentos en pie. Se llama Apartamentos Hwang Gung.</span>
+  </a>
+</li>
+<!--FIN--><!-- Voces Inocentes -->
 <li>
   <a href="../Peliculas/pelicula952.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
