--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sobrevivientes despues del terremoto -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Van Helsing: Cazador de monstruos -->
+<li>
+  <a href="../Peliculas/pelicula954.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fqorDWIwBBwMvLTZXxUWgrEyGWy.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Van Helsing: Cazador de monstruos 2004</span>
+    <span class="hidden">‎¡El legendario cazador de monstruos Van Helsing (Hugh Jackman) es convocado a la misteriosa Transilvania en una misión que lo empujará a una batalla arrolladora contra las fuerzas de la oscuridad! Con acción sin parar y efectos especiales electrizantes, Van Helsing es un evento cinematográfico impulsado por la adrenalina que Roger Ebert llama "¡Espectacular!"‎</span>
+  </a>
+</li>
+<!--FIN--><!-- Sobrevivientes despues del terremoto -->
 <li>
   <a href="../Peliculas/pelicula953.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
