--- a/Categorias/accion/index.html
+++ b/Categorias/accion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Van Helsing: Cazador de monstruos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La colonia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula955.html">
+    <img src="https://image.tmdb.org/t/p/original/2VezrcRVvZxPjpCgSqiXB7tF5Gd.jpg" alt="La colonia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La colonia</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Van Helsing: Cazador de monstruos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula954.html">
     <img src="https://image.tmdb.org/t/p/original/fqorDWIwBBwMvLTZXxUWgrEyGWy.jpg" alt="Van Helsing: Cazador de monstruos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
