Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Despues del apocalipsis -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La noche devoro al mundo -->
+<li>
+  <a href="../Peliculas/pelicula957.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qRyv9dTfxIC69APlLGkr4cJ1z56.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La noche devoró al mundo 2018</span>
+    <span class="hidden">Tras despertarse y encontrarse completamente solo en un apartamento donde la noche anterior se celebraba una fiesta multitudinaria, Sam se ve obligado inmediatamente a enfrentarse a una realidad aterradora: los muertos vivientes han invadido las calles de París.</span>
+  </a>
+</li>
+<!--FIN--><!-- Despues del apocalipsis -->
 <li>
   <a href="../Peliculas/pelicula956.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
