--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La noche devoro al mundo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla Resurge -->
+<li>
+  <a href="../Peliculas/pelicula958.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uhls3dFqMZyesWWrIHoaCvoIUQC.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla Resurge 2016</span>
+    <span class="hidden">Godzilla, fuerza destructiva insondable para el hombre, resucita en el Tokio de hoy en día para acosar de nuevo a la civilización. Un país aún atormentado por las secuelas de un desastre natural, experimenta de repente el horror catastrófico de Godzilla. Apremiado por la muerte y la desesperación, Japón deberá encontrar el poder para superar este desafío.</span>
+  </a>
+</li>
+<!--FIN--><!-- La noche devoro al mundo -->
 <li>
   <a href="../Peliculas/pelicula957.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
