--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla Resurge -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- De vuelta a la accion -->
+<li>
+  <a href="../Peliculas/pelicula959.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mAvyQ2X3767LwXE2htvAd22ucd3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">De vuelta a la acción 2025</span>
+    <span class="hidden">Quince años después de desaparecer de la CIA y empezar una familia, los insuperables Matt y Emily regresan al mundo del espionaje cuando se revela su verdadera identidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla Resurge -->
 <li>
   <a href="../Peliculas/pelicula958.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
