--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- De vuelta a la accion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Proyecto X -->
+<li>
+  <a href="../Peliculas/pelicula960.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/owF9NIcQOPFAOjp2pni8BsVlnRq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Proyecto X 2012</span>
+    <span class="hidden">Tres estudiantes de un instituto deciden organizar una fiesta salvaje en casa de uno de ellos, promocionándola en las redes sociales como la fiesta más loca de la temporada. Además, los chicos deciden grabarla para luego publicarla en la red. Pero, poco a poco, irán surgiendo una serie de complicaciones imprevistas...</span>
+  </a>
+</li>
+<!--FIN--><!-- De vuelta a la accion -->
 <li>
   <a href="../Peliculas/pelicula959.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
