Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Proyecto X -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Henry Danger, La Pelicula -->
+<li>
+  <a href="../Peliculas/pelicula961.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dTHEq2PIRAIq4COayxraiGiaajX.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Henry Danger, La Película 2025</span>
+    <span class="hidden">Henry Hart se convierte en un héroe local en Dystopia después de dejar atrás Swellview. Cuando las trampas de la fama comienzan a pasar factura, se produce un giro con la presentación de Missy, una superfan que pone su mundo patas arriba.</span>
+  </a>
+</li>
+<!--FIN--><!-- Proyecto X -->
 <li>
   <a href="../Peliculas/pelicula960.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
