Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Henry Danger, La Pelicula -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Telma: La Unicornio -->
+<li>
+  <a href="../Peliculas/pelicula962.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ohuki9saKOCtaKH72VBz5gx54tZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Telma: La Unicornio 2024</span>
+    <span class="hidden">Una poni cantante que sueña con el estrellato consigue la fama instantánea cuando se convierte en una brillante unicornio..., pero ser una celebridad no es tan sencillo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Henry Danger, La Pelicula -->
 <li>
   <a href="../Peliculas/pelicula961.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
