Crear/Actualizar Categorias/aventura/index.html

--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Van Helsing: Cazador de monstruos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pantera Negra -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula963.html">
+    <img src="https://image.tmdb.org/t/p/original/lAPzezdc5E6DFnttJwCWXZ9A9C6.jpg" alt="Pantera Negra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Pantera Negra</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Van Helsing: Cazador de monstruos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula954.html">
     <img src="https://image.tmdb.org/t/p/original/fqorDWIwBBwMvLTZXxUWgrEyGWy.jpg" alt="Van Helsing: Cazador de monstruos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
