--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 <!-- Carrusel horizontal de Series -->
   <section class="mb-8">
     <div class="flex items-center justify-between mb-4">
-      <h2 class="text-base sm:text-lg font-semibold">Tv Shows</h2>
+      <h2 class="text-base sm:text-lg font-semibold">Series</h2>
      <button 
   class="text-xs sm:text-sm muted flex items-center gap-2 hover:text-yellow-400 transition" 
   onclick="window.location.href='Categorias/serie/index.html'">
@@ -780,3 +780,4 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
