Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Extraordinario -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 13 fantasmas -->
+<li>
+  <a href="../Peliculas/pelicula965.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tobmCmAgCNVhqxUN7r58cnoYOco.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">13 fantasmas 2001</span>
+    <span class="hidden">Arthur Kriticos y sus dos hijos, Kathy y Bobby, sólo se tienen los unos a los otros tras haberlo perdido todo. Jean, mujer de Arthur y madre de sus hijos, murió en un incendio que dejó al resto de la familia sin nada, hasta que de repente, Arthur hereda una extraña casa de su misterioso y excéntrico tío Cyrus. La casa está hecha de acero y de cristal y es una maravilla de la arquitectura moderna, con muchos espacios abiertos, impoluta y de líneas rectas. A Arthur y los chicos les cuesta creer su golpe de buena suerte, y al llegar a la nueva casa admiran la elegancia de sus paredes de cristal. Lo que no saben es que la casa de la luz guarda un oscuro secreto.</span>
+  </a>
+</li>
+<!--FIN--><!-- Extraordinario -->
 <li>
   <a href="../Peliculas/pelicula964.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
