Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 13 fantasmas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Escuadron 6 -->
+<li>
+  <a href="../Peliculas/pelicula966.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ug4XukdNLwD9Ygyw4V0L5DjoNAp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Escuadrón 6 2019</span>
+    <span class="hidden">Un multimillonario genio de la tecnología simula su muerte y conforma un equipo internacional para derrocar a un cruel dictador en una misión arriesgada y sangrienta.</span>
+  </a>
+</li>
+<!--FIN--><!-- 13 fantasmas -->
 <li>
   <a href="../Peliculas/pelicula965.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
