--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Escuadron 6 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los feos -->
+<li>
+  <a href="../Peliculas/pelicula967.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7r5OFwdVobnAp9Mzu0KG1VgsYbH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los feos 2024</span>
+    <span class="hidden">En una distopía futurista que impone cánones de belleza y cirugías cosméticas, una adolescente emprende un viaje peligroso para salvar a una amiga.</span>
+  </a>
+</li>
+<!--FIN--><!-- Escuadron 6 -->
 <li>
   <a href="../Peliculas/pelicula966.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
